--- a/conf/linked.data.gov.au.conf
+++ b/conf/linked.data.gov.au.conf
@@ -30,7 +30,7 @@
         RewriteRule ^/def/gnaf(.*)$ http://gnafld.net/def/gnaf$1.ttl?  [R=302,L]
         RewriteCond %{HTTP:Accept} text/turtle [NC]
         RewriteRule ^/def/gnaf(.*)$ http://gnafld.net/def/gnaf$1.ttl  [R=302,L]
-        RewriteRule ^/def/gnaf.ttl$ http://gnafld.net/def/gnaf.ttl  [R=302,L]
+        RewriteRule ^/def/gnaf(.*).ttl$ http://gnafld.net/def/gnaf$1.ttl  [R=302,L]
         RewriteRule ^/def/gnaf(.*)$ http://gnafld.net/def/gnaf$1 [R=302,L]
 
 
@@ -39,7 +39,7 @@
         RewriteRule ^/def/reg-status(.*)$ http://www.linked.data.gov.au/def/reg-status$1.ttl?  [R=302,L]
         RewriteCond %{HTTP:Accept} text/turtle [NC]
         RewriteRule ^/def/reg-status(.*)$ http://www.linked.data.gov.au/def/reg-status$1.ttl  [R=302,L]
-        RewriteRule ^/def/reg-status.ttl$ http://www.linked.data.gov.au/def/reg-status.ttl  [R=302,L]
+        RewriteRule ^/def/reg-status(.*).ttl$ http://www.linked.data.gov.au/def/reg-status$1.ttl  [R=302,L]
         RewriteRule ^/def/reg-status(.*)$ http://www.linked.data.gov.au/def/reg-status$1 [R=302,L]
 
 
@@ -48,7 +48,7 @@
         RewriteRule ^/def/placenames(.*)$ http://www.linked.data.gov.au/def/placenames$1.ttl?  [R=302,L]
         RewriteCond %{HTTP:Accept} text/turtle [NC]
         RewriteRule ^/def/placenames(.*)$ http://www.linked.data.gov.au/def/placenames$1.ttl  [R=302,L]
-        RewriteRule ^/def/placenames.ttl$ http://www.linked.data.gov.au/def/placenames.ttl [R=302,L]
+        RewriteRule ^/def/placenames(.*).ttl$ http://www.linked.data.gov.au/def/placenames$1.ttl [R=302,L]
         RewriteRule ^/def/placenames(.*)$ http://www.linked.data.gov.au/def/placenames$1 [R=302,L]
         
 
@@ -57,7 +57,7 @@
         RewriteRule ^/def/agrif(.*)$ http://www.linked.data.gov.au/def/agrif.ttl? [R=302,L]
         RewriteCond %{HTTP:Accept} text/turtle [NC]
         RewriteRule ^/def/agrif(.*)$ http://www.linked.data.gov.au/def/agrif$1.ttl [R=302,L]
-        RewriteRule ^/def/agrif.ttl$ http://www.linked.data.gov.au/def/agrif.ttl [R=302,L]
+        RewriteRule ^/def/agrif(.*).ttl$ http://www.linked.data.gov.au/def/agrif$1.ttl [R=302,L]
         RewriteRule ^/def/agrif(.*)$ http://www.linked.data.gov.au/def/agrif$1 [R=302,L]
 
 
@@ -66,7 +66,7 @@
         RewriteRule ^/def/asgs(.*)$ http://www.linked.data.gov.au/def/asgs.ttl? [R=302,L]
         RewriteCond %{HTTP:Accept} text/turtle [NC]
         RewriteRule ^/def/asgs(.*)$ http://www.linked.data.gov.au/def/asgs$1.ttl [R=302,L]
-        RewriteRule ^/def/asgs.ttl$ http://www.linked.data.gov.au/def/asgs.ttl [R=302,L]
+        RewriteRule ^/def/asgs(.*).ttl$ http://www.linked.data.gov.au/def/asgs$1ttl [R=302,L]
         RewriteRule ^/def/asgs(.*)$ http://www.linked.data.gov.au/def/asgs$1 [R=302,L]
 
 
@@ -75,7 +75,7 @@
         RewriteRule ^/def/iso19160-1-address(.*)$ http://www.linked.data.gov.au/def/iso19160-1-address$1.ttl? [R=302,L]
         RewriteCond %{HTTP:Accept} text/turtle [NC]
         RewriteRule ^/def/iso19160-1-address(.*)$ http://www.linked.data.gov.au/def/iso19160-1-address$1.ttl [R=302,L]
-        RewriteRule ^/def/iso19160-1-address.ttl$ http://www.linked.data.gov.au/def/iso19160-1-address.ttl [R=302,L]
+        RewriteRule ^/def/iso19160-1-address(.*).ttl$ http://www.linked.data.gov.au/def/iso19160-1-address$1.ttl [R=302,L]
         RewriteRule ^/def/iso19160-1-address(.*)$ http://www.linked.data.gov.au/def/iso19160-1-address$1 [R=302,L]
 
 
@@ -84,7 +84,7 @@
         RewriteRule ^/def/iso19160-1-address-nz-profile(.*)$ http://www.linked.data.gov.au/def/iso19160-1-address-nz-profile$1.ttl? [R=302,L]
         RewriteCond %{HTTP:Accept} text/turtle [NC]
         RewriteRule ^/def/iso19160-1-address-nz-profile(.*)$ http://www.linked.data.gov.au/def/iso19160-1-address-nz-profile$1.ttl [R=302,L]
-        RewriteRule ^/def/iso19160-1-address-nz-profile.ttl$ http://www.linked.data.gov.au/def/iso19160-1-address-nz-profile.ttl [R=302,L]
+        RewriteRule ^/def/iso19160-1-address-nz-profile(.*).ttl$ http://www.linked.data.gov.au/def/iso19160-1-address-nz-profile$1.ttl [R=302,L]
         RewriteRule ^/def/iso19160-1-address-nz-profile(.*)$ http://www.linked.data.gov.au/def/iso19160-1-address-nz-profile$1 [R=302,L]
 
 
@@ -93,7 +93,7 @@
         RewriteRule ^/def/dataset(.*)$ http://www.linked.data.gov.au/def/dataset.ttl? [R=302,L]
         RewriteCond %{HTTP:Accept} text/turtle [NC]
         RewriteRule ^/def/dataset(.*)$ http://www.linked.data.gov.au/def/dataset$1.ttl [R=302,L]
-        RewriteRule ^/def/dataset.ttl$ http://www.linked.data.gov.au/def/dataset.ttl [R=302,L]
+        RewriteRule ^/def/dataset(.*).ttl$ http://www.linked.data.gov.au/def/dataset$1.ttl [R=302,L]
         RewriteRule ^/def/dataset(.*)$ http://www.linked.data.gov.au/def/dataset$1 [R=302,L]
 
 
@@ -102,7 +102,7 @@
         RewriteRule ^/def/fsdf(.*)$ http://www.linked.data.gov.au/def/fsdf.ttl? [R=302,L]
         RewriteCond %{HTTP:Accept} text/turtle [NC]
         RewriteRule ^/def/fsdf(.*)$ http://www.linked.data.gov.au/def/fsdf$1.ttl [R=302,L]
-        RewriteRule ^/def/fsdf.ttl$ http://www.linked.data.gov.au/def/fsdf.ttl [R=302,L]
+        RewriteRule ^/def/fsdf(.*).ttl$ http://www.linked.data.gov.au/def/fsdf$1ttl [R=302,L]
         RewriteRule ^/def/fsdf(.*)$ http://www.linked.data.gov.au/def/fsdf$1 [R=302,L]
 
 
@@ -111,9 +111,26 @@
         RewriteRule ^/def/loci(.*)$ http://www.linked.data.gov.au/def/loci.ttl? [R=302,L]
         RewriteCond %{HTTP:Accept} text/turtle [NC]
         RewriteRule ^/def/loci(.*)$ http://www.linked.data.gov.au/def/loci$1.ttl [R=302,L]
-        RewriteRule ^/def/loci.ttl$ http://www.linked.data.gov.au/def/loci.ttl [R=302,L]
+        RewriteRule ^/def/loci(.*).ttl$ http://www.linked.data.gov.au/def/loci$1.ttl [R=302,L]
         RewriteRule ^/def/loci(.*)$ http://www.linked.data.gov.au/def/loci$1 [R=302,L]
 
+        # http://linked.data.gov.au/def/gba
+        RewriteCond %{QUERY_STRING} ^_format=text/turtle$
+        RewriteRule ^/def/gba(.*)$ http://registry2.it.csiro.au/def/gba$1?_format=ttl [R=302,L]
+        RewriteCond %{HTTP:Accept} text/turtle [NC]
+        RewriteRule ^/def/gba(.*)$ http://registry2.it.csiro.au/def/gba$1?_format=ttl [R=302,L]
+        RewriteRule ^/def/gba(.*).ttl$ http://registry2.it.csiro.au/def/gba$1?_format=ttl [R=302,L]
+        RewriteCond %{QUERY_STRING} ^_format=application/ld+json$
+        RewriteRule ^/def/gba(.*)$ http://registry2.it.csiro.au/def/gba$1?_format=jsonld [R=302,L]
+        RewriteCond %{HTTP:Accept} application/ld+json [NC]
+        RewriteRule ^/def/gba(.*)$ http://registry2.it.csiro.au/def/gba$1?_format=jsonld [R=302,L]
+        RewriteRule ^/def/gba(.*).jsonld$ http://registry2.it.csiro.au/def/gba$1?_format=jsonld [R=302,L]
+        RewriteCond %{QUERY_STRING} ^_format=application/rdf+xml$
+        RewriteRule ^/def/gba(.*)$ http://registry2.it.csiro.au/def/gba$1?_format=rdf [R=302,L]
+        RewriteCond %{HTTP:Accept} application/rdf+xml [NC]
+        RewriteRule ^/def/gba(.*)$ http://registry2.it.csiro.au/def/gba$1?_format=rdf [R=302,L]
+        RewriteRule ^/def/gba(.*).rdf$ http://registry2.it.csiro.au/def/gba$1?_format=rdf [R=302,L]        
+        RewriteRule ^/def/gba(.*)$ http://registry2.it.csiro.au/def/gba$1 [R=302,L]
 
         #
         #	Datasets
@@ -236,6 +253,11 @@
         RewriteCond %{HTTP:Accept} text/turtle [NC]
         RewriteRule ^/dataset/asgs2016/(.*)$                http://asgsld.net/$1?_format=text/turtle [R=302,L]
         RewriteRule ^/dataset/asgs2016/(.*)$                http://asgsld.net/$1 [R=302,L]
+
+		# Linksets
+
+		# Addresses / Catchments
+		RewriteRule ^/linkset/bhafqv$                		https://github.com/CSIRO-enviro-informatics/addressescatchments-linkset [R=302,L]
 
         #
         #       AGLDWG website - legacy link redirector
