--- a/conf/linked.data.gov.au/org/csiro.conf
+++ b/conf/linked.data.gov.au/org/csiro.conf
@@ -170,16 +170,16 @@ RewriteRule ^/def/project(.*)$                          https://dr-shorthair.git
 # https://linked.data.gov.au/def/asls-land-surface
 RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
 RewriteCond %{HTTP:Accept} text/turtle [NC]
-RewriteRule ^/def/asls-land-surface($|/.+)$             https://vocabs.ardc.edu.au/repository/api/lda/csiro-ansis/land-surface-classifiers/3ed/resource.ttl?uri=http://anzsoil.org/def/au/asls/land-surface$1 [R=302,L]
-RewriteRule ^/def/asls-land-surface.ttl$                https://vocabs.ardc.edu.au/repository/api/lda/csiro-ansis/land-surface-classifiers/3ed/resource.ttl?uri=http://anzsoil.org/def/au/asls/land-surface [R=302,L]
+RewriteRule ^/def/asls-land-surface($|/.+)$             https://vocabs.ardc.edu.au/repository/api/lda/csiro/land-surface-classifiers/3ed/resource.ttl?uri=http://anzsoil.org/def/au/asls/land-surface$1 [R=302,L]
+RewriteRule ^/def/asls-land-surface.ttl$                https://vocabs.ardc.edu.au/repository/api/lda/csiro/land-surface-classifiers/3ed/resource.ttl?uri=http://anzsoil.org/def/au/asls/land-surface [R=302,L]
 RewriteRule ^/def/asls-land-surface($|/.+)$             https://vocabs.ardc.edu.au/repository/api/lda/csiro/land-surface-classifiers/3ed/resource?uri=http://anzsoil.org/def/au/asls/land-surface$1 [R=302,L]
 
 
 # https://linked.data.gov.au/def/asls-landform
 RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
 RewriteCond %{HTTP:Accept} text/turtle [NC]
-RewriteRule ^/def/asls-landform($|/.+)$                 https://vocabs.ardc.edu.au/repository/api/lda/csiro-ansis/landform-classifiers/3ed/resource.ttl?uri=http://anzsoil.org/def/au/asls/landform$1 [R=302,L]
-RewriteRule ^/def/asls-landform.ttl$                    https://vocabs.ardc.edu.au/repository/api/lda/csiro-ansis/landform-classifiers/3ed/resource.ttl?uri=http://anzsoil.org/def/au/asls/landform [R=302,L]
+RewriteRule ^/def/asls-landform($|/.+)$                 https://vocabs.ardc.edu.au/repository/api/lda/csiro/landform-classifiers/3ed/resource.ttl?uri=http://anzsoil.org/def/au/asls/landform$1 [R=302,L]
+RewriteRule ^/def/asls-landform.ttl$                    https://vocabs.ardc.edu.au/repository/api/lda/csiro/landform-classifiers/3ed/resource.ttl?uri=http://anzsoil.org/def/au/asls/landform [R=302,L]
 RewriteRule ^/def/asls-landform($|/.+)$                 https://vocabs.ardc.edu.au/repository/api/lda/csiro/landform-classifiers/3ed/resource?uri=http://anzsoil.org/def/au/asls/landform$1 [R=302,L]
 
 
@@ -194,8 +194,8 @@ RewriteRule ^/def/asls-location($|/.+)$                 https://vocabs.ardc.edu.
 # https://linked.data.gov.au/def/asls-soil-profile
 RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
 RewriteCond %{HTTP:Accept} text/turtle [NC]
-RewriteRule ^/def/asls-soil-profile($|/.+)$            https://vocabs.ardc.edu.au/repository/api/lda/csiro-ansis/soil-profile-classifiers/3ed/resource.ttl?uri=http://anzsoil.org/def/au/asls/soil-profile$1 [R=302,L]
-RewriteRule ^/def/asls-soil-profile.ttl$               https://vocabs.ardc.edu.au/repository/api/lda/csiro-ansis/soil-profile-classifiers/3ed/resource.ttl?uri=http://anzsoil.org/def/au/asls/soil-profile [R=302,L]
+RewriteRule ^/def/asls-soil-profile($|/.+)$            https://vocabs.ardc.edu.au/repository/api/lda/csiro/soil-profile-classifiers/3ed/resource.ttl?uri=http://anzsoil.org/def/au/asls/soil-profile$1 [R=302,L]
+RewriteRule ^/def/asls-soil-profile.ttl$               https://vocabs.ardc.edu.au/repository/api/lda/csiro/soil-profile-classifiers/3ed/resource.ttl?uri=http://anzsoil.org/def/au/asls/soil-profile [R=302,L]
 RewriteRule ^/def/asls-soil-profile($|/.+)$            https://vocabs.ardc.edu.au/repository/api/lda/csiro/soil-profile-classifiers/3ed/resource?uri=http://anzsoil.org/def/au/asls/soil-profile$1 [R=302,L]
 
 
@@ -231,17 +231,17 @@ RewriteRule ^/def/scm-scma-2011.ttl$                    https://vocabs.ardc.edu.
 RewriteRule ^/def/scm-scma-2011($|/.+)$                 https://vocabs.ardc.edu.au/repository/api/lda/ub/soil-chemical-methods-australasia/scm3/resource?uri=http://anzsoil.org/def/au/scm/scma-2011$1 [R=302,L]
 
 
+# https://linked.data.gov.au/def/soil
+RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
+RewriteCond %{HTTP:Accept} text/turtle [NC]
+RewriteRule ^\/def\/soil($|\#.+$)                       https://raw.githubusercontent.com/ANZSoilData/def-au-domain/main/rdf/domain.ttl$1 [R=302,L]
+RewriteRule ^/def/soil.ttl$                             https://raw.githubusercontent.com/ANZSoilData/def-au-domain/main/rdf/domain.ttl [R=302,L]
+RewriteRule ^\/def\/soil($|\#.+$)                       https://raw.githack.com/ANZSoilData/def-au-domain/main/doc/domain.html$1 [R=302,NE,L]
+
+
 # https://linked.data.gov.au/def/spmile
 RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
 RewriteCond %{HTTP:Accept} text/turtle [NC]
 RewriteRule ^/def/spmile($|/.+)$                        https://vocabs.ardc.edu.au/repository/api/lda/csiro-ansis/soil-physical-measurements/1-0-2023-04-21/resource.ttl?uri=http://anzsoil.org/def/au/spm/spmile$1 [R=302,L]
 RewriteRule ^/def/spmile.ttl$                           https://vocabs.ardc.edu.au/repository/api/lda/csiro-ansis/soil-physical-measurements/1-0-2023-04-21/resource.ttl?uri=http://anzsoil.org/def/au/spm/spmile [R=302,L]
 RewriteRule ^/def/spmile($|/.+)$                        https://vocabs.ardc.edu.au/repository/api/lda/csiro-ansis/soil-physical-measurements/1-0-2023-04-21/resource?uri=http://anzsoil.org/def/au/spm/spmile$1 [R=302,L]
-
-
-# https://linked.data.gov.au/def/soil
-RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
-RewriteCond %{HTTP:Accept} text/turtle [NC]
-RewriteRule ^\/def\/soil($|\#.+$)                       https://raw.githubusercontent.com/ANZSoilData/def-au-domain/main/rdf/domain.ttl$1 [R=302,L]
-RewriteRule ^/def/soil.ttl$                             https://raw.githubusercontent.com/ANZSoilData/def-au-domain/main/rdf/domain.ttl [R=302,L]
-RewriteRule ^\/def\/soil($|\#.+$)                       https://raw.githack.com/ANZSoilData/def-au-domain/main/doc/domain.html$1 [R=302,L]
