--- a/conf/linked.data.gov.au/org/tern.conf
+++ b/conf/linked.data.gov.au/org/tern.conf
@@ -66,24 +66,35 @@ RewriteRule ^/dataset/bdbsa(.*)$ https://linkeddata.tern.org.au/viewers/general?
 
 # https://linked.data.gov.au/dataset/bioregion
 # Dataset
-RewriteRule ^/dataset/bioregion$                              https://linkeddata.tern.org.au/viewer/tern/id/http://linked.data.gov.au/dataset/bioregion/IBRA7 [R=302,QSA,L]
+# Turtle
+RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
 RewriteCond %{HTTP:Accept} text/turtle [NC]
-RewriteRule ^/dataset/bioregion/(.*)$                         https://linkeddata.tern.org.au/viewer/tern/id/http://linked.data.gov.au/dataset/bioregion/$1?_mediatype=text/turtle [R=302,L]
-RewriteRule ^/dataset/bioregion/(.*).ttl$                     https://linkeddata.tern.org.au/viewer/tern/id/http://linked.data.gov.au/dataset/bioregion/$1?_mediatype=text/turtle [R=302,L]
-RewriteCond %{HTTP:Accept} application/rdf+xml [NC]
-RewriteRule ^/dataset/bioregion/(.*)$                         https://linkeddata.tern.org.au/viewer/tern/id/http://linked.data.gov.au/dataset/bioregion/$1?_mediatype=application/rdf+xml [R=302,L]
-RewriteRule ^/dataset/bioregion/(.*).(rdf|owl|xml)$           https://linkeddata.tern.org.au/viewer/tern/id/http://linked.data.gov.au/dataset/bioregion/$1?_mediatype=application/rdf+xml [R=302,L]
-RewriteCond %{HTTP:Accept} application/ld+json [NC]
-RewriteRule ^/dataset/bioregion/(.*)$                         https://linkeddata.tern.org.au/viewer/tern/id/http://linked.data.gov.au/dataset/bioregion/$1?_mediatype=application/ld+json [R=302,L]
-RewriteRule ^/dataset/bioregion/(.*).(json|jsonld|json-ld)$   https://linkeddata.tern.org.au/viewer/tern/id/http://linked.data.gov.au/dataset/bioregion/$1?_mediatype=application/ld+json [R=302,L]
-RewriteCond %{HTTP:Accept} text/n3 [NC]
-RewriteRule ^/dataset/bioregion/(.*)$                         https://linkeddata.tern.org.au/viewer/tern/id/http://linked.data.gov.au/dataset/bioregion/$1?_mediatype=text/n3 [R=302,L]
-RewriteRule ^/dataset/bioregion/(.*).n3$                      https://linkeddata.tern.org.au/viewer/tern/id/http://linked.data.gov.au/dataset/bioregion/$1?_mediatype=text/n3 [R=302,L]
+RewriteRule ^\/dataset\/bioregion(.*)$ https://linkeddata.tern.org.au/api/v1.0/viewer/resource?uri=http://linked.data.gov.au/dataset/bioregion/IBRA7$1\&sparql_endpoint=https://virtuoso.tern.org.au/sparql&format=text/turtle [R=302,L]
+RewriteRule ^\/dataset\/bioregion(.*).ttl$ https://linkeddata.tern.org.au/api/v1.0/viewer/resource?uri=http://linked.data.gov.au/dataset/bioregion/IBRA7$1\&sparql_endpoint=https://virtuoso.tern.org.au/sparql&format=text/turtle [R=302,L]
+# RDF/XML
+RewriteCond %{QUERY_STRING} ^_mediatype=application/rdf\+xml$ [OR]
+RewriteCond %{HTTP:Accept} application/rdf\+xml [NC]
+RewriteRule ^\/dataset\/bioregion(.*)$ https://linkeddata.tern.org.au/api/v1.0/viewer/resource?uri=http://linked.data.gov.au/dataset/bioregion/IBRA7$1\&sparql_endpoint=https://virtuoso.tern.org.au/sparql&format=application/rdf+xml [R=302,L]
+RewriteRule ^\/dataset\/bioregion(.*).rdf$ https://linkeddata.tern.org.au/api/v1.0/viewer/resource?uri=http://linked.data.gov.au/dataset/bioregion/IBRA7$1\&sparql_endpoint=https://virtuoso.tern.org.au/sparql&format=application/rdf+xml [R=302,L]
+# N-Triples
+RewriteCond %{QUERY_STRING} ^_mediatype=application/n-triples$ [OR]
 RewriteCond %{HTTP:Accept} application/n-triples [NC]
-RewriteRule ^/dataset/bioregion/(.*)$                         https://linkeddata.tern.org.au/viewer/tern/id/http://linked.data.gov.au/dataset/bioregion/$1?_mediatype=application/n-triples [R=302,L]
-RewriteRule ^/dataset/bioregion/(.*).(nt|ntriples|n-triples)$ https://linkeddata.tern.org.au/viewer/tern/id/http://linked.data.gov.au/dataset/bioregion/$1?_mediatype=application/n-triples [R=302,L]
-RewriteRule ^/dataset/bioregion/(.*)                          https://linkeddata.tern.org.au/viewer/tern/id/http://linked.data.gov.au/dataset/bioregion/$1 [R=302,QSA,L]
-
+RewriteRule ^\/dataset\/bioregion\/(.*)$ https://linkeddata.tern.org.au/api/v1.0/viewer/resource?uri=http://linked.data.gov.au/dataset/bioregion/IBRA7$1\&sparql_endpoint=https://virtuoso.tern.org.au/sparql&format=application/n-triples [R=302,L]
+RewriteRule ^\/dataset\/bioregion\/(.*).nt$ https://linkeddata.tern.org.au/api/v1.0/viewer/resource?uri=http://linked.data.gov.au/dataset/bioregion/IBRA7$1\&sparql_endpoint=https://virtuoso.tern.org.au/sparql&format=application/n-triples
+# JSON-LD
+RewriteCond %{QUERY_STRING} ^_mediatype=application/ld\+json$ [OR]
+RewriteCond %{HTTP:Accept} application/ld\+json [NC]
+RewriteRule ^\/dataset\/bioregion(.*)$ https://linkeddata.tern.org.au/api/v1.0/viewer/resource?uri=http://linked.data.gov.au/dataset/bioregion/IBRA7$1\&sparql_endpoint=https://virtuoso.tern.org.au/sparql&format=application/ld+json [R=302,L]
+RewriteRule ^\/dataset\/bioregion(.*).jsonld$ https://linkeddata.tern.org.au/api/v1.0/viewer/resource?uri=http://linked.data.gov.au/dataset/bioregion/IBRA7$1\&sparql_endpoint=https://virtuoso.tern.org.au/sparql&format=application/ld+json [R=302,L]
+# Notation3
+RewriteCond %{QUERY_STRING} ^_mediatype=text/n3$ [OR]
+RewriteCond %{HTTP:Accept} text/n3 [NC]
+RewriteRule ^\/dataset\/bioregion(.*)$ https://linkeddata.tern.org.au/api/v1.0/viewer/resource?uri=http://linked.data.gov.au/dataset/bioregion/IBRA7$1\&sparql_endpoint=https://virtuoso.tern.org.au/sparql&format=text/n3 [R=302,L]
+RewriteRule ^\/dataset\/bioregion(.*).n3$ https://linkeddata.tern.org.au/api/v1.0/viewer/resource?uri=http://linked.data.gov.au/dataset/bioregion/IBRA7$1\&sparql_endpoint=https://virtuoso.tern.org.au/sparql&format=text/n3 [R=302,L]
+# .owl file extension
+RewriteRule ^\/dataset\/bioregion(.*).owl$ https://linkeddata.tern.org.au/api/v1.0/viewer/resource?uri=http://linked.data.gov.au/dataset/bioregion/IBRA7$1\&sparql_endpoint=https://virtuoso.tern.org.au/sparql&format=text/turtle [R=302,L]
+# HTML
+RewriteRule ^\/dataset\/bioregion(.*)$ https://linkeddata.tern.org.au/viewers/general?uri=http://linked.data.gov.au/dataset/bioregion/IBRA7$1\&sparql_endpoint=https://virtuoso.tern.org.au/sparql [R=302,L]
 
 # https://linked.data.gov.au/dataset/corveg
 # Dataset
