--- a/conf/linked.data.gov.au/org/csiro.conf
+++ b/conf/linked.data.gov.au/org/csiro.conf
@@ -174,6 +174,8 @@ RewriteRule ^/def/asls-asc$                             https://vocabs.ardc.edu.
 RewriteRule ^/def/asls-asc.ttl$                         https://vocabs.ardc.edu.au/repository/api/lda/csiro/australian-soil-classification/3ed/resource.ttl?uri=http://anzsoil.org/def/au/asc/Glossary$1 [R=302,L]
 RewriteRule ^/def/asls-asc$                             https://vocabs.ardc.edu.au/repository/api/lda/csiro/australian-soil-classification/3ed/resource?uri=http://anzsoil.org/def/au/asc/Glossary$1 [R=302,L]
 
+RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
+RewriteCond %{HTTP:Accept} text/turtle [NC]
 RewriteRule ^/def/asls-asc/(.+)$                        https://vocabs.ardc.edu.au/repository/api/lda/csiro/australian-soil-classification/3ed/resource.ttl?uri=http://anzsoil.org/def/au/asc/$1 [R=302,L]
 RewriteRule ^/def/asls-asc/(.+).ttl$                    https://vocabs.ardc.edu.au/repository/api/lda/csiro/australian-soil-classification/3ed/resource.ttl?uri=http://anzsoil.org/def/au/asc/$1 [R=302,L]
 RewriteRule ^/def/asls-asc/(.+)$                        https://vocabs.ardc.edu.au/repository/api/lda/csiro/australian-soil-classification/3ed/resource?uri=http://anzsoil.org/def/au/asc/$1 [R=302,L]
