--- a/conf/linked.data.gov.au/org/gssa.conf
+++ b/conf/linked.data.gov.au/org/gssa.conf
@@ -20,7 +20,7 @@ RewriteRule ^/def/mer-doc-types($|/.*)$ "https://vocabularies.sarig.sa.gov.au/ob
 RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
 RewriteCond %{HTTP:Accept} text/turtle [NC]
 RewriteRule ^/def/mer-for-codes($|/.*)$ "https://vocabularies.sarig.sa.gov.au/object?uri=https://linked.data.gov.au/def/mer-for-codes$1&_mediatype=text/turtle" [R=302,L]
-RewriteRule ^/def/mer-for-codes($|/.*)$ "https://vocabularies.sarig.sa.gov.au/object?uri=https://linked.data.gov.aum/def/mer-for-codes$1" [R=302,NE,L]
+RewriteRule ^/def/mer-for-codes($|/.*)$ "https://vocabularies.sarig.sa.gov.au/object?uri=https://linked.data.gov.au/def/mer-for-codes$1" [R=302,NE,L]
 
 # https://linked.data.gov.au/def/maintenancefrequencycode
 RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
