--- a/conf/linked.data.gov.au/org/gswa.conf
+++ b/conf/linked.data.gov.au/org/gswa.conf
@@ -10,9 +10,9 @@ RewriteRule ^/def/gswa-supermodel$ https://kurrawong.github.io/gswa-supermodel/ 
 # https://linked.data.gov.au/def/bore
 RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
 RewriteCond %{HTTP:Accept} text/turtle [NC]
-RewriteRule ^/def/bore$                         https://raw.githubusercontent.com/Kurrawong/gswa-supermodel/main/rdf/components/bore.ttl [R=302,L]
-RewriteRule ^/def/bore.ttl$                     https://raw.githubusercontent.com/Kurrawong/gswa-supermodel/main/rdf/components/bore.ttl [R=302,L]
-RewriteRule ^/def/bore$                         https://kurrawong.github.io/gswa-supermodel/components/bore/ [R=302,L]
+RewriteRule ^/def/bore$                         https://kurrawong.github.io/bore-model/model.ttl [R=302,L]
+RewriteRule ^/def/bore.ttl$                     https://kurrawong.github.io/bore-model/model.ttl [R=302,L]
+RewriteRule ^/def/bore$                         https://kurrawong.github.io/bore-model/model.html [R=302,L]
 
 # https://linked.data.gov.au/def/mine
 RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
