--- a/conf/linked.data.gov.au/org/dcceew.conf
+++ b/conf/linked.data.gov.au/org/dcceew.conf
@@ -1,5 +1,5 @@
-# https://linked.data.gov.au/dataset/bdr
-RewriteRule ^/dataset/bdr$                              https://bdrtesting.net/ [R=302,L]
+# https://linked.data.gov.au/dataset/bdr -> https://linked.bdr.gov.au/dataset/bdr
+RewriteRule ^/dataset/bdr($|/.*?$)                      https://linked.bdr.gov.au/dataset/bdr$1?_host=linked.data.gov.au [R=307,QSA,L]
 
 
 # https://linked.data.gov.au/def/nsl
